# claude-dev-workflow

./: README.md  SETUP.md
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/plans/: 2026-04-01-dev-workflow-skills.md  2026-04-02-mcp-migration-and-setup-guide.md
docs/superpowers/specs/: 2026-04-01-dev-workflow-skills-design.md  2026-04-02-mcp-migration-and-setup-guide.md
pr-review/: .gitignore  Makefile  README.md  pyproject.toml
pr-review/config/: .secrets.toml.example  configuration.toml
pr-review/src/pr_reviewer/: __init__.py  cli.py  preflight.py  runner.py
skills/bb-pr/: SKILL.md
skills/bb-prreview/: SKILL.md
skills/create-pr/: SKILL.md
skills/gh-issue/: SKILL.md  github-status-helper.md
skills/issue/: SKILL.md
skills/jira/: SKILL.md
skills/jira-ticket/: SKILL.md
skills/pr/: SKILL.md
skills/review/: SKILL.md
skills/review-pr/: SKILL.md
skills/setup/: SKILL.md
skills/working-on-github-issue/: SKILL.md  github-status-helper.md
skills/working-on-jira-ticket/: SKILL.md
