[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-reviewer"
version = "0.1.0"
description = "Local PR reviewer using PR-Agent + Ollama (Gemma 4) for Bitbucket"
requires-python = ">=3.10"
dependencies = [
    "pr-agent",
    "tomli>=2.0; python_version < '3.11'",
    "httpx>=0.25",
]

[project.scripts]
pr-review = "pr_reviewer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
